<resources>
    <string name="app_name">LoginForm</string>
    <string name="email">Email</string>
    <string name="login_title">ZOKALAB \ DEVELOPMENT</string>
    <string name="password">Password</string>
    <string name="create_account">Create a new account</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>