<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/main"
    android:alpha="0.95"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/email"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/password"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="15dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="283dp"
        android:text="@string/no_account"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="135dp"
        android:layout_height="16dp"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="286dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        android:layout_marginStart="228dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="70dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>